--- a/createOrder.html
+++ b/createOrder.html
@@ -5,23 +5,24 @@
     <title>ESOP Trading</title>
 </head>
 <body>
-  <form>
-    <label>Username : </label>
-    <input type="text" id="username">
-    <br>
-    <label>Order Quantity : </label>
-    <input type="text" id="order-quantity">
-    <br>
-    <label>Order Price : </label>
-    <input type="text" id="order-price">
-    <br>
-    <label>Order Type : </label>
-    <select id="order-type">
-      <option value="BUY">Buy</option>
-      <option value="SELL">Sell</option>
-    </select>
-    <br>
-    <button id="submit">Submit</button>
-  </form>
+    <h1>Create Order</h1>
+    <form id="create-order-form">
+        <label>Username : </label>
+        <input type="text" id="username">
+        <br>
+        <label>Order Quantity : </label>
+        <input type="number" id="order-quantity">
+        <br>
+        <label>Order Price : </label>
+        <input type="number" id="order-price">
+        <br>
+        <label>Order Type : </label>
+        <select id="order-type">
+            <option value="BUY">Buy</option>
+            <option value="SELL">Sell</option>
+        </select>
+        <br>
+        <button id="submit">Submit</button>
+    </form>
 </body>
 </html>
