--- a/createOrder.html
+++ b/createOrder.html
@@ -6,23 +6,27 @@
 </head>
 <body>
     <h1>Create Order</h1>
+    <div id="errors">
+    </div>
     <form id="create-order-form">
         <label>Username : </label>
-        <input type="text" id="username">
+        <input name="username" type="text" id="username">
         <br>
         <label>Order Quantity : </label>
-        <input type="number" id="order-quantity">
+        <input name="orderQuantity" type="number" id="order-quantity">
         <br>
         <label>Order Price : </label>
-        <input type="number" id="order-price">
+        <input type="number" name="orderPrice" id="order-price">
         <br>
         <label>Order Type : </label>
-        <select id="order-type">
+        <select id="order-type" name="orderType">
             <option value="BUY">Buy</option>
             <option value="SELL">Sell</option>
         </select>
         <br>
         <button id="submit">Submit</button>
     </form>
+    <script type="text/javascript" src="js/createOrder.js">
+    </script>
 </body>
 </html>
