Add: successHandler and errorHandler for response return from createOrder API

--- a/createOrder.html
+++ b/createOrder.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Create Order</h1>
-    <div id="errors">
+    <div id="response">
     </div>
     <form id="create-order-form">
         <label>Username : </label>
