Add global css stylesheet with font

--- a/createOrder.html
+++ b/createOrder.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>ESOP Trading</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/global.css" />
 </head>
+
 <body>
     <h1>Create Order</h1>
     <div id="response">
@@ -29,4 +35,5 @@
     <script type="text/javascript" src="js/createOrder.js">
     </script>
 </body>
+
 </html>
