Improve UI for error response text

--- a/createOrder.html
+++ b/createOrder.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1 class="center-text">Create Order</h1>
-    <div id="response">
+    <div id="error-response-container" class="form-center">
     </div>
     <div class="form-center">
         <form id="create-order-form">
