Make required fields required

--- a/createOrder.html
+++ b/createOrder.html
@@ -19,19 +19,19 @@
         <form id="create-order-form">
             <label>Username : </label>
             <br>
-            <input name="username" type="text" id="username">
+            <input name="username" type="text" id="username" required>
             <br>
             <label>Order Quantity : </label>
             <br>
-            <input name="orderQuantity" type="number" id="order-quantity">
+            <input name="orderQuantity" type="number" id="order-quantity" required>
             <br>
             <label>Order Price : </label>
             <br>
-            <input type="number" name="orderPrice" id="order-price">
+            <input type="number" name="orderPrice" id="order-price" required>
             <br>
             <label>Order Type : </label>
             <br>
-            <select id="order-type" name="orderType">
+            <select id="order-type" name="orderType" required>
             <option value="">Select</option>
                 <option value="BUY">Buy</option>
                 <option value="SELL">Sell</option>
