Modify: Handle OrderHistory empty scenario

--- a/orderHistory.html
+++ b/orderHistory.html
@@ -21,6 +21,10 @@
             <button id="submit">Show Order History</button>
         </form>
     </div>
+    <div id="success-response-container">
+    </div>
+    <script type="text/javascript" src="js/orderHistory.js">
+    </script>
 </body>
 
 </html>
