Extract api logic to APIService

--- a/src/orderHistory.html
+++ b/src/orderHistory.html
@@ -23,7 +23,7 @@
     </div>
     <div id="success-response-container">
     </div>
-    <script type="text/javascript" src="js/orderHistory.js">
+    <script type="module" src="js/orderHistory.js">
     </script>
 </body>
 
